GraalVM11対応 …
-  Update: LogFormatterの改善
-  Change: LogFormatterはexportsしないと機能しない事象を解消